# uacme

./: .gitignore  AUTHORS  ChangeLog  GNUmakefile  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  aclocal.m4  base64.c  base64.h  config.h.in  configure  configure.ac  crypto.c  crypto.h  curlwrap.c  curlwrap.h  dns.sh  idents.c  idents.h  json.c  json.h  libualpn.c  log.c  log.h  msg.c  msg.h  nsupdate.sh  read-file.c  uacme.1  uacme.1.html  uacme.1.txt  uacme.c  uacme.sh  uacme_1.0.10.orig.tar.gz.delta  uacme_1.0.10.orig.tar.gz.id  uacme_1.0.11.orig.tar.gz.delta  (+83 more)
build-aux/: ar-lib  git-version-gen
debian/: changelog  clean  control  copyright  gbp.conf  pristine-tar.sh  rules  uacme.doc-base.uacme  uacme.doc-base.ualpn  watch
debian/patches/: dont-depend-on-asciidoc.patch  fix-a2x-xmllint.patch  fix-pedantic-warning.patch  remove-ac-revision.patch  remove-gnumakefile.patch  series
debian/source/: options
debian/upstream/: metadata
docs/: index.html  uacme.html  ualpn.html
libev/: ev.c
